--- a/tenant-dev.env
+++ b/tenant-dev.env
@@ -1,4 +1,5 @@
-export TENANT="dev-twdpsio"
-export TENANT_APPLICATION="dev-dpsctl"
-export TENANT_CLIENT_ID=op://empc-lab/svc-auth0/dev-twdpsio-management-api-client-id
-export TENANT_CLIENT_SECRET=op://empc-lab/svc-auth0/dev-twdpsio-management-api-client-secret
+export TENANT="five-twdpsio"
+export TENANT_APPLICATION="dev-teamfive-dpsctl"
+export TENANT_CLIENT_ID=op://cohorts/five-svc-auth0/five-management-api-client-id
+export TENANT_CLIENT_SECRET=op://cohorts/five-svc-auth0/five-management-api-client-secret
+export GREN_GITHUB_TOKEN=op://cohorts/svc-github/api-token
